--- a/client/components/users/userHeader.jade
+++ b/client/components/users/userHeader.jade
@@ -12,7 +12,7 @@ template(name="headerUserBar")
               = currentUser.username
 
 template(name="memberMenuPopup")
-  ul.pop-over-list
+  ul.pop-over-list.table-grid
     with currentUser
       li
         a.js-toggle-grey-icons(href="#")
@@ -64,12 +64,11 @@ template(name="memberMenuPopup")
               i.fa.fa-question-circle
               | {{_ 'help'}}
       unless currentUser.isWorker
-        ul.pop-over-list
-          li
-            a(href="{{pathFor 'board' id=templatesBoardId slug=templatesBoardSlug}}")
-              span
-                i.fa.fa-list
-                | {{_ 'templates'}}
+        li
+          a(href="{{pathFor 'board' id=templatesBoardId slug=templatesBoardSlug}}")
+            span
+              i.fa.fa-list
+              | {{_ 'templates'}}
       if currentUser.isAdmin
         li
           a.js-go-setting(href="{{pathFor 'setting'}}")
@@ -204,18 +203,18 @@ template(name="changeLanguagePopup")
 template(name="changeSettingsPopup")
   ul.pop-over-list
     li
-      a.js-toggle-desktop-drag-handles
+      span.bold
         i.fa.fa-arrows
         | {{_ 'show-desktop-drag-handles'}}
-        if isShowDesktopDragHandles
-          i.fa.fa-check
+      .materialCheckBox.js-toggle-desktop-drag-handles(class="{{#if isShowDesktopDragHandles}}is-checked{{/if}}", value=isShowDesktopDragHandles)
     unless currentUser.isWorker
       li
-        label.bold.clear
+        span.bold
           i.fa.fa-sort-numeric-asc
           | {{_ 'show-cards-minimum-count'}}
         input#show-cards-count-at.inline-input.left(type="number" value="#{showCardsCountAt}" min="-1")
-        label.bold.clear
+      li
+        span.bold
           i.fa.fa-calendar
           | {{_ 'start-day-of-week'}}
         select#start-day-of-week.inline-input.left
@@ -224,14 +223,14 @@ template(name="changeSettingsPopup")
               option(selected="true", value="#{day.value}") #{day.name}
             else
               option(value="#{day.value}") #{day.name}
-        label.bold.clear
-          | {{_ 'card-settings'}}
-        ul#cards.card-description-rescued
-          a.flex.js-rescue-card-description(title="{{_ 'rescue-card-description'}}")
-            b &nbsp;
-            #rescue-card-description.materialCheckBox.left(class="{{#if rescueCardDescription}}is-checked{{/if}}", value=rescueCardDescription)
-            span {{_ 'rescue-card-description'}}
-        input.js-apply-user-settings.left(type="submit" value="{{_ 'apply'}}")
+      li
+        div
+          span.bold
+            | {{_ 'card-settings'}}
+          span
+            | {{_ 'rescue-card-description'}}
+        #rescue-card-description.materialCheckBox.left(class="{{#if rescueCardDescription}}is-checked{{/if}}", value=rescueCardDescription)
+      input.js-apply-user-settings.full.primary(type="submit" value="{{_ 'apply'}}")
 
 template(name="userDeletePopup")
   unless currentUser.isWorker
