Addendum to #4: board color applies to popup header

--- a/popup.jade
+++ b/popup.jade
@@ -4,7 +4,7 @@ template(name="popup")
 template(name="popupDetached")
   .pop-over.js-pop-over(
     class="{{#unless title}}miniprofile{{/unless}}"
-    class=currentBoard.colorClass
+    class=colorClass
     class="{{#unless title}}no-title{{/unless}}"
     class="{{#unless isRendered}}invisible{{/unless}}"
     data-popup=name)
