Refine popup behaviour on special situations
This especially improves reaction to viewport resizes, and is now closer of what unmoving, unresizable popups do now.

1. Has absolute positionning rather than fixed, so user can get rid on it if it wants to (and this is closer to current card details behaviour)
2. Now does a good job avoiding resize loops while handling, I believe, every inner/outer resizes.
3. The above is made possible because we are less obsessed about keeping the popup within the screen. So we really prefer to let width and height of popup unconstraigned.
4. However, if the user uses CSS resizing, then we want to enforce that particular size. It was not the case before, so it was also less close the current card details behaviour. And the closer the better for major behaviours.
5. Added a few options and their defaults:
- To make the popup tend to stick to its opener, especially when resizing the viewport, even if this makes hiding it. A non-sticky popup will try to stay visible as long as its opener is hidden.
- To prevent to any part of the popup goes outside the screen, especially when moving. This is off by default, but what is always on is preventing moving popups outside the viewport to an extent where no element which can drag the popup would be visible. This avoid the "hidding behind address bar" effect.

--- a/client/components/main/popup.css
+++ b/client/components/main/popup.css
@@ -2,8 +2,12 @@
   background: #fff;
   border-bottom-color: #c2c2c2;
   box-shadow: 0 0.2vh 0.8vh rgba(0, 0, 0, 0.3);
-  /* so they can easily travel with mouse */
-  position: fixed;
+
+  /* absolute positionning is, I believe, less intrusive for users especially for popups.
+  as they are now all draggable by default, users can brings them with us by scrolling if they want to.
+  however it may cause issues with coordinate systems as this kind of things is not my specialty; see
+  PopupDetached for further context.  */
+  position: absolute;
   overflow-x: hidden;
   overflow-y: auto;
   display: flex;
@@ -11,10 +15,14 @@
   align-items: stretch;
   resize: both;
   pointer-events: all;
-  max-height: 100vh;
+  max-height: calc(100vh - 2 * var(--popup-margin));
   border-radius: var(--space-3xs);
   /* minimum for popups, see component */
   z-index: 10;
+
+  &.popup-fullscreen {
+    --popup-margin: 0;
+  }
 
   .content-wrapper {
     width: auto;
@@ -66,7 +74,7 @@ sizing make them too large. maybe this can be relaxed per-popup */
   white-space: nowrap;
   font-size: var(--step-0);
   flex: 1;
-  cursor: grab !important;
+  cursor: grab;
 }
 .pop-over .back-btn {
   float: left;
